codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__switch_account_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Switch Account
  Select an auth profile from CODEX_HOME/multi_auths.

› 1. a.json  API key
  2. b.json  API key

  Press enter to confirm or esc to go back
